// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should process import.css 1`] = `
Array [
  "// css runtime
import * as runtime from \\"../runtime/index.js\\";

// declarations
import { ABC as cssLoaderImport0_ABC } from \\"some-file\\";
import { DEF as cssLoaderImport1_DEF } from \\"some-file\\";
import { HIJ as cssLoaderImport2_HIJ } from \\"other-file\\";
import cssLoaderImport3 from \\"some-file\\";
import cssLoaderImport4 from \\"other-file\\";

// CSS
export default runtime.create([
  cssLoaderImport3,
  cssLoaderImport4,
  runtime.moduleWithoutSourceMap(module.id, \\"body {\\\\n  background: \\" + cssLoaderImport0_ABC + \\" \\" + cssLoaderImport1_DEF + \\" \\" + cssLoaderImport2_HIJ + \\" klm\\\\n}\\\\n\\\\n.\\" + cssLoaderImport0_ABC + \\" { \\" + cssLoaderImport1_DEF + \\": \\" + cssLoaderImport2_HIJ + \\"; }\\\\n\\")
]);",
]
`;

exports[`loader should process simple.css 1`] = `
Array [
  "// css runtime
import * as runtime from \\"../runtime/index.js\\";

// declarations


// CSS
export default runtime.create([
  runtime.moduleWithoutSourceMap(module.id, \\"body {\\\\n  background: red;\\\\n}\\\\n\\\\n.class {\\\\n  color: rgb(1, 2, 3);\\\\n}\\\\n\\")
]);",
]
`;
